# PokerEvaluator

./: CMakeLists.txt
include/: Card.h  Deck.h  Evaluator.h  Hand.h  MonteCarloEvaluator.h
src/: Card.cpp  Deck.cpp  Evaluator.cpp  Hand.cpp  MT.cpp  MonteCarloEvaluator.cpp  main.cpp
